Fixed horizontal overflow issue

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
     background-color: black;
     color:white;
+    overflow-x: hidden;
 }
 
 /*Layout*/
@@ -95,6 +96,9 @@ body {
 }
 
 @media screen and (max-width:900px) {
+    body {
+        overflow-y: auto;
+    }
 
     .layout {
         display: grid;
